<resources>

    <string name="app_name">SURFconext OAuth 2.0 Android Application</string>
    <string name="surfnet">SURFnet</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start">Home</string>
    <string name="title_activity_scheme_capture">Response Data</string>
    <string name="button_login">Authorize This App!</string>
    <string name="button_refresh">Refresh</string>
    <string name="authorize_url">Authorize URI</string>
    <string name="authorize_response_type">Response Type</string>
    <string name="authorize_client_id">Client ID</string>
    <string name="authorize_scope">Scope</string>
    <string name="authorize_redirect_uri">Redirect URI</string>

</resources>