<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/surfnet"
        tools:context=".StartActivity"
        />
    
    <TextView
        android:id="@+id/textView_autorize_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_header"
        android:text="@string/authorize_url"
        android:ems="10"
        />
    
    <EditText
        android:id="@+id/editText_autorize_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_autorize_url"
        android:text="@string/authorize_url"
        android:ems="10"
        android:inputType="none"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        />

    <TextView
        android:id="@+id/textView_response_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText_autorize_url"
        android:text="@string/authorize_response_type"
        android:ems="10"
        />
        
    <EditText
        android:id="@+id/editText_response_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_response_type"
        android:ems="10"
        android:text="@string/authorize_response_type"
        android:inputType="none"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        />

    <TextView
        android:id="@+id/textView_client_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText_response_type"
        android:text="@string/authorize_client_id"
        android:ems="10"
        />
        
    <EditText
        android:id="@+id/editText_client_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_client_id"
        android:ems="10"
        android:text="@string/authorize_client_id"
        android:inputType="none"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        />

	<TextView
        android:id="@+id/textView_redirect_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText_client_id"
        android:text="@string/authorize_redirect_uri"
        android:ems="10"
        />
        
    <EditText
        android:id="@+id/editText_redirect_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_redirect_uri"
        android:ems="10"
        android:text="@string/authorize_redirect_uri"
        android:inputType="none"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText_redirect_uri"
        android:text="@string/button_login"
        />

</RelativeLayout>
